# exs-core

./: pyproject.toml
.github/workflows/: release.yml
libexs/: __init__.py  _core.py  _protocols.py  _schemas.py  _state.py  _types.py  protocols.py  schemas.py  types.py
libexs/compositor/: abc_core.py  service.py
libexs/enums/icons/: __init__.py  power_profiles.py  ui.py
libexs/exceptions/: base.py  plugin.py
libexs/register/: __init__.py  cmd.py  deco.py
libexs/register/events/: __init__.py  base.py  connectors.py
libexs/settings/: widgets.py
libexs/utils/: __init__.py  clipboard.py  colors.py  commands.py  loop.py  monitor.py  namespace.py  notify_system.py  plugin.py  system.py  window.py
libexs/widgets/: base.py  icon.py  window.py
